--- a/scripts/install
+++ b/scripts/install
@@ -1,4 +1,7 @@
 #!/bin/sh
 # Composer Post-Install script
 
-cp vendor/ocean-internet/wp-plugin-framework/wp-plugin-framework.loader.php wp-plugin-framework.loader.php
+SCRIPTS_DIR="$( cd "$( dirname "${BASH_SOURCE[0]}" )" && pwd )"
+
+cp $SCRIPTS_DIR/mu-composer-loader.php  .
+cp $SCRIPTS_DIR/wp-plugin-framework.php .
