--- a/scripts/install
+++ b/scripts/install
@@ -1,7 +1,7 @@
 #!/bin/sh
 # Composer Post-Install script
 
-SCRIPTS_DIR="$( cd "$( dirname "${BASH_SOURCE[0]}" )" && pwd )"
+SCRIPTS_DIR=$( cd "$( dirname "$0" )" && pwd );
 
 cp $SCRIPTS_DIR/mu-composer-loader.php  .
 cp $SCRIPTS_DIR/wp-plugin-framework.php .
